# vidette

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md
docs/: README.md  (+6 more)
server/: pyproject.toml
server/tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_db.py  test_detect.py  test_event_engine.py  test_events.py  test_events_api.py  test_exporter.py  test_go2rtc.py  test_janitor.py  test_keepwarm.py  test_managed_cameras.py  test_motion.py  test_mqtt.py  test_mse_proxy.py  test_notify.py  test_onvif.py  test_pipeline_runner.py  test_previews.py  test_reconcile.py  test_recorder.py  test_retention.py  test_routers_m1.py  test_segments.py  test_signing.py  test_track.py  test_webpush.py  test_ws_metrics.py
server/vidette/: __init__.py  __main__.py  runtime.py
server/vidette/adapters/: __init__.py  base.py  eufy.py  onvif.py  rtsp.py
server/vidette/api/: __init__.py  app.py  errors.py
server/vidette/api/routers/: __init__.py  auth.py  cameras.py  config_cameras.py  events.py  metrics.py  push.py  recordings.py  streams.py  system.py  ws.py
server/vidette/auth/: __init__.py  deps.py  service.py
server/vidette/core/: __init__.py  config.py  events.py  managed.py
server/vidette/db/: __init__.py  schema.py
server/vidette/events/: __init__.py  clips.py  engine.py
server/vidette/notify/: __init__.py  apprise_channel.py  base.py  dispatcher.py  mqtt.py  signing.py  webhook.py  webpush.py
server/vidette/pipeline/: __init__.py  base.py  decode.py  detect.py  motion.py  runner.py  track.py
server/vidette/recording/: __init__.py  exporter.py  janitor.py  previews.py  reconcile.py  recorder.py  retention.py  segments.py
server/vidette/streams/: __init__.py  go2rtc.py  keepwarm.py
(+54 files in other folders)
