[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vidette"
version = "0.0.1"
description = "Self-hosted video security that understands intent — not just motion."
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Alexander Belov", email = "alex@baadev.com" }]
keywords = ["nvr", "camera", "video", "security", "vlm", "home-automation", "self-hosted"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/baadev/vidette"
Documentation = "https://github.com/baadev/vidette/tree/main/docs"
Issues = "https://github.com/baadev/vidette/issues"

[project.scripts]
vidette = "vidette.__main__:main"

[project.entry-points."vidette.adapters"]
rtsp = "vidette.adapters.rtsp:RtspAdapter"
eufy = "vidette.adapters.eufy:EufyAdapter"

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["vidette"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
# Typographic dashes/× in docstrings are house style, not typos.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
